frame/support/test/tests/derive_impl_ui/runtime_type_invalid.stderr
error: `#[inject_runtime_type]` can only be attached to `RuntimeCall`, `RuntimeEvent`, `RuntimeOrigin` or `PalletInfo`
  --> tests/derive_impl_ui/inject_runtime_type_invalid.rs:15:5
   |
15 |     type RuntimeInfo = ();
   |     ^^^^^^^^^^^^^^^^^^^^^^

error[E0046]: not all trait items implemented, missing: `RuntimeInfo`
  --> tests/derive_impl_ui/inject_runtime_type_invalid.rs:13:1
   |
5  |     type RuntimeInfo;
   |     ---------------- `RuntimeInfo` from trait
...
13 | impl Config for Pallet {
   | ^^^^^^^^^^^^^^^^^^^^^^ missing `RuntimeInfo` in implementation
